# tugan-vpn

./: .dockerignore  .gitignore  Makefile  pyproject.toml  requirements.txt
backend/: .dockerignore  .gitignore  Dockerfile  config.py  manage.py  pyproject.toml  requirements.txt
backend/api/: admin.py  models.py  serializers.py  telegram_middleware.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_remove_key_total_gb_remove_key_used_gb_and_more.py  0002_user_is_active.py  0003_key_access_token.py  0003_remove_user_is_active.py  0004_key_can_claim_gift.py  0004_user_is_active.py  0005_key_next_reset_date.py  0005_remove_user_is_active.py  0006_alter_referral_referred_tg_id_and_more.py  0006_rename_tg_id_payment_user_payment_payment_id.py  0007_user_utm_source.py  0008_key_tried_to_connect.py
backend/api/ninja_api/: root_router.py  xui.py  yookassa.py
backend/api/services/: xui.py
backend/apps/access/: admin.py  apps.py  constants.py  forms.py  handlers.py  tasks.py  views.py
backend/apps/billing/: apps.py  events.py  models.py  services.py  urls.py  views.py
backend/backend/: settings.py
backend/bot/: bot.py  webhook_server.py
backend/config/: admin.py  celery.py  settings.py  urls.py
backend/core/: admin.py  admin_apps.py  celery.py  settings.py  urls.py
backend/notifications/: models.py
backend/payments/: admin.py  apps.py
backend/referrals/: admin.py  apps.py
backend/users/: authentication.py  models.py  validators.py
backend/vpn/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
frontend/: .dockerignore  (+6 more)
(+114 files in other folders)
